Fix alignments.

--- a/styles/innoversity.css
+++ b/styles/innoversity.css
@@ -28,26 +28,28 @@ li li {
 
 p.titlePersons {
   margin-bottom: 0.5em;
+  line-height: 24px !important;
 }
 
-
 .title.slide .logo {
-  float: right;
-  margin: 4em 15px .5em;
+  position: absolute;
+  top: 69px;
+  left: 731px;
+  height: 67px;
 }
 
 .title.slide h2 {
   clear: both;
   line-height: 1;
   font-size: 3.1em;
-  margin: 0 0 .2em -.1em;
+  margin: 210px 0 0;
 }
 
 .title.slide h3 {
   font-size: 1.7em;
   line-height: 1.2;
   letter-spacing: .2px;
-  margin: .2em 0 .5em;
+  margin: 0 0 40px;
   font-weight: normal;
 }
 
@@ -56,13 +58,13 @@ p.titlePersons {
 }
 
 a.license {
-  float: right;
-  margin-right: 60px;
-  border-bottom: 0;
+  position: absolute;
+  top: 544px;
+  right: 109px;
 }
 
 a.license img {
-  height: 1em;
+  height: 32px;
 }
 
 .TODO {
@@ -159,7 +161,7 @@ ins {
   border-radius:10px;
   width: 510px;
   line-height: 1.2;
-  top: 375px;
+  top: 305px;
   left: 60px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, .5);
 
